--- a/promotions.html
+++ b/promotions.html
@@ -36,9 +36,7 @@
                     <li><a class="dropdown-item" href="promotions.html">Black-Market</a></li>
                   </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="Support.html">Support</a>
-                  </li>
+             
                   <li class="nav-item">
                     <a class="nav-link active" href="checkout.html">
                     <i class="bi bi-cart"></i>
@@ -57,6 +55,15 @@
       </header>
 
   <!-- Section-->
+  <header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Shop in style</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Real clothings and affordable prices!</p>
+        </div>
+    </div>
+</header>
+
   <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -69,14 +76,14 @@
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Fancy Product</h5>
+                            <h5 class="fw-bolder">Grey Nike tech</h5>
                             <!-- Product price-->
                             $40.00 - $80.00
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -88,12 +95,12 @@
                     <!-- Product image-->
                     <a href="productitem.html">
                       <img class="card-img-top"
-                       src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                       src="Bape.webp" alt="Picture of bape hoodie" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Special Item</h5>
+                            <h5 class="fw-bolder">Bape Hoodie</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -109,7 +116,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -119,12 +126,12 @@
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
                     <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="Black-tech.webp" alt="Picture of a Black Nike Tech" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Sale Item</h5>
+                            <h5 class="fw-bolder">Black Nike tech</h5>
                             <!-- Product price-->
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
@@ -132,7 +139,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -140,12 +147,12 @@
                 <div class="card h-100">
                     <!-- Product image-->
                     <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="Dior jordan.webp" alt="Picture of Dior Jordan 1s" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Popular Item</h5>
+                            <h5 class="fw-bolder">Dior Jordan 1s</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -160,7 +167,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -170,11 +177,11 @@
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
                     <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="https___hypebeast.com_image_2022_09_off-white-nike-air-force-1-brooklyn-dx1419-300-release-1.jpg" alt="Pictue of off-white Air force ones" /></a>
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Sale Item</h5>
+                            <h5 class="fw-bolder">Off-White AF1s</h5>
                             <!-- Product price-->
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
@@ -182,7 +189,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -190,19 +197,19 @@
                 <div class="card h-100">
                     <!-- Product image-->
                     <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="GooseJacket.jpeg" alt="Picture of a Candian Goose Jacket" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Fancy Product</h5>
+                            <h5 class="fw-bolder">Goose Puffer Jacket</h5>
                             <!-- Product price-->
                             $120.00 - $280.00
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -212,12 +219,12 @@
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
                     <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="Jacket.webp" alt="Picture of a Moncler Puffer Jacket" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Special Item</h5>
+                            <h5 class="fw-bolder">Moncler Puffer Jacket</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -233,7 +240,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -241,12 +248,12 @@
                 <div class="card h-100">
                     <!-- Product image-->
                     <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="applewatch.jpeg" alt="Picture of an apple watch" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Popular Item</h5>
+                            <h5 class="fw-bolder">Apple Watch</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -261,7 +268,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                     </div>
                 </div>
             </div>
