--- a/Products.html
+++ b/Products.html
@@ -36,9 +36,7 @@
                     <li><a class="dropdown-item" href="promotions.html">Black-Market</a></li>
                   </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="Support.html">Support</a>
-                  </li>
+             
                   <li class="nav-item">
                     <a class="nav-link active" href="checkout.html">
                     <i class="bi bi-cart"></i>
@@ -59,7 +57,7 @@
   <header class="bg-dark py-5">
       <div class="container px-4 px-lg-5 my-5">
           <div class="text-center text-white">
-              <h1 class="display-4 fw-bolder">Shop in style</h1>
+              <h1 class="display-4 fw-bolder">Shop till you drop!</h1>
               <p class="lead fw-normal text-white-50 mb-0">Everyday utilities for everyday purposes!</p>
           </div>
       </div>
